--- a/order-dev.yml
+++ b/order-dev.yml
@@ -2,7 +2,7 @@ server:
   port: 9999
 spring:
   application:
-    name: guli-order
+    name: guli_order
   profiles:
     active: dev
   datasource:
