--- a/order-dev.yml
+++ b/order-dev.yml
@@ -19,7 +19,7 @@ mybatis-plus:
   mapper-locations: classpath:com/guli/order/mapper/xml/*.xml
 eureka:
   client:
-    serviceUrl:
+    serviceUrl: #Eureka客户端与Eureka服务端进行交互的地址
       defaultZone: http://127.0.0.1:8100/eureka/
   instance:
     prefer-ip-address: true
