--- a/order-dev.yml
+++ b/order-dev.yml
@@ -21,6 +21,9 @@ eureka:
   client:
     serviceUrl: #Eureka客户端与Eureka服务端进行交互的地址
       defaultZone: http://127.0.0.1:8100/eureka
+    enabled: true
+    registerWithEureka: true
+    fetchRegistry: true
   instance:
     prefer-ip-address: true
 feign:
