--- a/order-dev.yml
+++ b/order-dev.yml
@@ -20,7 +20,7 @@ mybatis-plus:
 eureka:
   client:
     serviceUrl: #Eureka客户端与Eureka服务端进行交互的地址
-      defaultZone: http://127.0.0.1:8100/eureka
+      defaultZone: http://127.0.0.1:8100/eureka/
   instance:
     prefer-ip-address: true
 feign:
