--- a/user-dev.yml
+++ b/user-dev.yml
@@ -2,7 +2,7 @@ server:
   port: 8888
 spring:
   application:
-    name: guli-user
+    name: guli_user
   profiles:
     active: dev
   datasource:
@@ -19,7 +19,7 @@ mybatis-plus:
   mapper-locations: classpath:com/guli/user/mapper/xml/*.xml
 eureka:
   client:
-    service-url:
+    serviceUrl:
       defaultZone: http://127.0.0.1:8100/eureka/
   instance:
     prefer-ip-address: true
