--- a/user-dev.yml
+++ b/user-dev.yml
@@ -5,6 +5,11 @@ spring:
     name: guli_user
   profiles:
     active: dev
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    url: jdbc:mysql://localhost:3306/user?characterEncoding=utf-8&useSSL=false
+    username: root
+    password: root
   jackson:
     date-format: yyyy-MM-dd HH:mm:ss
     time-zone: GMT+8
