--- a/user-dev.yml
+++ b/user-dev.yml
@@ -23,4 +23,6 @@ eureka:
       defaultZone: http://127.0.0.1:8100/eureka/
   instance:
     prefer-ip-address: true
-
+feign:
+  hystrix:
+    enabled: true
